fix about content z-index issue on mobile

--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -1,7 +1,7 @@
 .about {
   --background-scale: 0;
   --height: 10rem;
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
   height: var(--height);
@@ -25,7 +25,7 @@
     transform: scaleY(var(--background-scale));
     transform-origin: bottom;
     transition: 0.4s $ease-out-expo;
-    z-index: 1;
+    z-index: -1;
   }
 
   &__content {
